Self closing tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
   </head>
 
   <body>
-    <%= vueport yield %>
+    <%= yield %>
     <%= javascript_include_tag *webpack_asset_paths("application") %>
   </body>
 </html>
